# dev-container-template

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pullrequest.yaml
tests/: test_example.py
