[tool.poetry]
name = "devcontainer"
version = "0.1.0"
description = ""
authors = ["jasper <jaspajjr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
pre-commit = "3.5.0"
hypothesis = "^6.98.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
